name:                Nim
version:             1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/ddxtanx/NIMHS#readme
license:             BSD3
license-file:        LICENSE
author:              Garrett Credi
maintainer:          garrettcredi@gmail.com
copyright:           2020 Garrett Credi
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Learning
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
